nullaway_error_8A7A66B4-65B7-46B1-A760-9E7B42BBA01A.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-web/src/main/java/org/springframework/web/cors/DefaultCorsProcessor.java:159: error: [NullAway] passing @Nullable parameter 'allowHeaders' where @NonNull is required
			responseHeaders.setAccessControlAllowHeaders(allowHeaders);
			                                             ^
    (see http://t.uber.com/nullaway )
